--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,14 @@
                 <input type="text" id="searchInput" placeholder="Search users..." autocomplete="off">
                 <div id="searchResults" class="search-results"></div>
             </div>
+            <div class="date-controls">
+                <button id="btnPrevDate" class="date-btn" title="Previous day">&#9664;</button>
+                <div class="date-display">
+                    <span class="date-label">Date</span>
+                    <span id="currentDateDisplay">--</span>
+                </div>
+                <button id="btnNextDate" class="date-btn" title="Next day">&#9654;</button>
+            </div>
             <div class="button-group">
                 <button id="btnMutualFriends" class="btn">Mutual Friends</button>
                 <button id="btnLeaderboard" class="btn">Influencer Leaderboard</button>
